feat: add quicksetting tile, basic UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Pineapple Lock Screen</string>
     <string name="accessibility_service_label">Pineapple Lock Screen - Accessibility Service</string>
+    <string name="tile_service_label">Lock Screen</string>
 </resources>
