--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Pineapple Lock Screen</string>
+    <string name="about">About</string>
     <string name="accessibility_service_label">Pineapple Lock Screen - Accessibility Service</string>
     <string name="tile_service_label">Lock Screen</string>
 </resources>
