--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="about">About</string>
     <string name="accessibility_service_label">Pineapple Lock Screen - Accessibility Service</string>
     <string name="tile_service_label">Lock Screen</string>
+    <string name="shortcut_name">Lock</string>
+    <string name="fab_lock_screen">Lock Screen</string>
+    <string name="open_source_licenses">Open Source Licenses</string>
+    <string name="current_version">Current Version</string>
+    <string name="card_a11y_description">This application require to enable its accessibility service in order to work.\nYou can use the following button to enable or disable the service conveniently.</string>
+    <string name="card_a11y_action_go_to_setting">Accessibility Settings</string>
+    <string name="card_shortcut_description">You can create a shortcut icon on your launcher to preform the lock action.</string>
+    <string name="card_shortcut_action_create_shortcut">Create Shortcut Icon</string>
+    <string name="msg_pls_enable_a11y_service_first">Please enable its accessibility service first</string>
+    <string name="msg_action_open_a11y_settings">Open Settings</string>
 </resources>
