create shortcut via widget screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">About</string>
     <string name="accessibility_service_label">Pineapple Lock Screen - Accessibility Service</string>
     <string name="tile_service_label">Lock Screen</string>
-    <string name="shortcut_name">Lock</string>
+    <string name="shortcut_name_lock">Lock</string>
     <string name="fab_lock_screen">Lock Screen</string>
     <string name="open_source_licenses">Open Source Licenses</string>
     <string name="current_version">Current Version</string>
@@ -15,4 +15,6 @@
     <string name="msg_action_open_a11y_settings">Open Settings</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="accessibility_service_description">This accessibility service is used to provide the lock screen ability in the Pineapple Lock Screen application, otherwise the application won\'t be able to work.\n\nTo enable the accessibility service, just tap the toggle switch in the top right corner, then tap Allow on the next screen. You don\'t need to enable the second shortcut switch.\n\nNote:\n1. If you force stop the main application, you might need to enable this service again.\n2. If the service is enabled but the application doesn\'t work as intended, try disable and enable it again.</string>
+    <string name="shortcut_name_powerdialog">Power Dialog</string>
+    <string name="menu">Menu</string>
 </resources>
