--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="accessibility_service_prominent_disclosure_dlg_desc">This application uses the Accessibility Service to provide the lock screen functionality. Related service needs to be enabled to work.\n\nYou can use the entrance link in the main screen to access the accessibility setting at any time you want.\n\nThis application doesn\'t collect any user data. You can also review the full content of Privacy Policy in the About screen.</string>
     <string name="accept">Accept</string>
     <string name="cancel">Cancel</string>
+    <string name="settings">Settings</string>
+    <string name="ok">OK</string>
+    <string name="details">Details</string>
+    <string name="option_use_compat_method">Use compat shortcut method</string>
+    <string name="option_use_compat_method_short_desc">When creating shortcut from widgets</string>
+    <string name="option_use_compat_method_long_desc">In some launchers, if you drag a shortcut from the widget list to the home screen, you can create a shortcut icon without the application icon displayed in the corner when using the compat method.</string>
 </resources>
