--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Pineapple Lock Screen</string>
+    <string name="app_launcher_name">Lock Screen</string>
     <string name="about">About</string>
     <string name="accessibility_service_label">Pineapple Lock Screen - Accessibility Service</string>
     <string name="tile_service_label">Lock Screen</string>
@@ -31,4 +32,8 @@
     <string name="option_battery_optimization">Battery optimization option</string>
     <string name="option_battery_optimization_short_desc">Consider disable it for this application</string>
     <string name="option_battery_optimization_long_desc">Some phone models/ROM may have very restrictive battery optimization functions which will result application service get killed in the background. Every time this application get killed, you\'ll need to enable its accessibility service again.\n\n To prevent this, you can disable Battery optimization for this application via system Settings screen by:\n \n 1. Select All apps in the dropdown\n 2. Select Pineapple Lock Screen then switch off or choose Don\'t optimize\n \nThis setting is only needed when your ROM keep killing the service of this application, you don\'t need to do anything if it works fine. Providing the ability of locking screen is the only thing that the service of this application will do. This won\'t affact your battery life.</string>
+    <string name="card_qstile_description">This application also provide a quick settings tile to turn the screen off. You can add the tile by edit the quick settings area and drag the Lock Screen tile to where you want.</string>
+    <string name="card_qstile_action_open_qs">Open Quick Settings</string>
+    <string name="rate_us">Rate Us</string>
+    <string name="share">Share</string>
 </resources>
