--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="app_widget_description">Resizable widget for locking screen</string>
     <string name="loading_widget">Loading</string>
     <string name="app_widget_name">Lock Screen Widget</string>
+    <string name="get_plus_version">Get Plus Version</string>
 </resources>
