Add per-app language preferences support
Related: https://android-developers.googleblog.com/2022/11/per-app-language-preferences-part-1.html?m=1

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -41,4 +41,6 @@
     <string name="loading_widget">加载中</string>
     <string name="app_widget_name">锁屏小部件</string>
     <string name="get_plus_version">获取 Plus 版</string>
+    <string name="language">语言</string>
+    <string name="contribute_translation">贡献翻译</string>
 </resources>
