--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="get_plus_version">Get Plus Version</string>
     <string name="language">Language</string>
     <string name="contribute_translation">Contribute Translation</string>
+    <string name="option_use_launcher_icon_to_lock">Use application icon to lock</string>
+    <string name="option_use_launcher_icon_to_lock_desc">Tap the app icon to lock the screen</string>
+    <string name="option_use_launcher_icon_to_lock_long_desc">Once this option is enabled, when accessibility service is enabled, you can then use this application\'s default icon to lock the screen.\n\nThis option is in case the compact method no longer works on newer android version and for users that don\'t want to have a badge icon on the shortcuts that they created.\n\nOnce enabled, you can still access the Settings screen to disable the option by tap and hold the default application icon to open the shortcut menu, and choose the Settings shortcut menu option.</string>
 </resources>
